[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "inferrvc"
authors = [{name = "Charles Marks", email = "charlesmarksco@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.0" #just guessing here.
dynamic = ["version", "description"]
dependencies = [
    'numpy<2.2',
    'scipy',
    'soundfile',
    'torch',
    'torchaudio',
    'librosa',
    'pyworld',
    'praat-parselmouth',
    'torchcrepe',
    'huggingface-hub',
    'fairseq @ git+https://github.com/VarunGumma/fairseq.git',
	'einops',
	'faiss-cpu'
]

[project.urls]
Home = "https://github.com/iqueak/RVC-inference-a"

[tool.flit.module]
name = "inferrvc"

